# count_instructions

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: lib.rs  ptrace_self.rs
src/linux/: fd.rs  mod.rs  ptrace_self.rs
